--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,22 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recyclerViewImage"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp" />
+
+    <ImageButton
+        android:id="@+id/btnGoUpload"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        />
+        android:background="@drawable/circle_button"
+        android:src="@android:drawable/ic_input_add"
+        app:tint="@android:color/white" />
 
 </RelativeLayout>
