--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -10,12 +10,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/imageViewItem"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="50dp"
             android:scaleType="centerCrop"
             android:src="@drawable/image4" />
 
@@ -23,10 +24,9 @@
             android:id="@+id/textViewNameItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="6dp"
             android:text="@string/app_name"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="13sp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
